# capella-trainer

./: .commitlintrc.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  AUTHORING.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-test-publish.yml  commit-check.yml  lint.yml  push-docker-image.yml
capella_trainer/: __init__.py  constants.py  element.py  exercise.py  folder.py  lesson.py  quiz.py  session.py  tasks.py
docs/source/: conf.py  index.rst
dropins/: com.deutschebahn.rest-api_refs.pull.5.merge.jar.license
frontend/: .env.example  .prettierrc.cjs  README.md  REUSE.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.cjs  vite.config.ts
frontend/assets/: REUSE.toml
frontend/public/: env.js
frontend/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/components/: admonition.tsx  content.tsx  exercise.tsx  focus-iframe.tsx  layout.tsx  mdx-container.tsx  navigation.tsx  project-control.tsx  quiz.tsx  render-mdx.tsx  tasks.tsx
frontend/src/components/markdown/: admonition.tsx  caicon.tsx  inline-image.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx
frontend/src/lib/: const.ts  utils.ts
frontend/src/lib/api/: client.ts  v1.d.ts
frontend/src/routes/: __root.tsx  chapter.tsx  index.tsx  lesson.tsx  root.tsx
frontend/src/routes/lesson/: $.tsx
tests/: test_capella_trainer.py
training/: folder.yaml  meta.yaml  training.yaml
training/01-introduction/: content.mdx  folder.yaml  tasks.py
training/01-introduction/00-introduction/: content.mdx  quiz.yaml
training/01-introduction/01-demo-color-coding/: content.mdx  lesson.yaml  tasks.py
training/01-introduction/01-welcome/: content.mdx
training/01-introduction/02-color-coding/: folder.yaml
training/01-introduction/02-color-coding/01-introduction/: content.mdx  lesson.yaml  tasks.py
training/01-introduction/02-color-coding/01-step-one/: content.mdx  lesson.yaml  tasks.py
training/01-introduction/02-color-coding/02-step-two/: content.mdx  lesson.yaml  tasks.py
training/01-introduction/02-color-coding/03-step-three/: content.mdx  lesson.yaml  tasks.py
training/01-introduction/02-color-coding/04-step-four/: content.mdx  lesson.yaml  quiz.yaml
training/01-introduction/02-color-coding/start-project/: PVMT_Demo.aird  PVMT_Demo.capella
training/01-introduction/02-define-custom-colors/: folder.yaml
training/01-introduction/02-define-custom-colors/01-introduction/: PVMT_Chapter1_Part1_Main_Image.jpeg.license  content.mdx  exercise.py  lesson.yaml
training/01-introduction/02-define-custom-colors/01-step-one/: exercise.py  lesson.yaml
training/01-introduction/02-define-custom-colors/02-extend-the-model/: content.mdx  exercise.py  lesson.yaml
training/01-introduction/02-define-custom-colors/02-step-two/: content.mdx  lesson.yaml
training/01-introduction/02-define-custom-colors/03-show-links/: content.mdx  exercise.py  lesson.yaml
training/01-introduction/02-define-custom-colors/03-step-three/: exercise.py  lesson.yaml
training/01-introduction/02-demo-color-coding/: lesson.yaml
training/01-introduction/03-add-custom-values/: folder.yaml
training/01-introduction/05-summary-and-quiz/: content.mdx  lesson.yaml  quiz.yaml
training/02-first-tests/: content.mdx  lesson.yaml  tasks.py
training/02-first-tests/active-solution-project/: .project  PVMT_Demo.aird
training/02-first-tests/model/: PVMT_Demo.aird
training/02-first-tests/project/: PVMT_Demo.aird
training/02-first-tests/solution-project/: PVMT_Demo.capella
training/02-first-tests/start-project/: My.vpd  PVMT_Demo.afm  PVMT_Demo.capella
training/02-setup-pv-definitions-sheet/: folder.yaml
training/02-setup-pv-definitions-sheet/01-introduction/: content.mdx  exercise.py  folder.yaml  lesson.yaml
training/02-setup-pv-definitions-sheet/02-setup-pv-configuration-file/: content.mdx  folder.yaml
training/02-setup-pv-definitions-sheet/03-create-an-extension/: content.mdx  exercise.py  lesson.yaml
training/02-setup-pv-definitions-sheet/start-project/: .project  PVMT_Demo.aird  PVMT_Demo.capella
training/03-some-folder/: meta.yaml
training/03-some-folder/01-some-child/: content.mdx  lesson.yaml
(+47 files in other folders)
